src/language-handler/antlr/AntimonyGrammarParser.ts
// Generated from src/language-handler/antlr/AntimonyGrammar.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AntimonyGrammarListener } from "./AntimonyGrammarListener";
import { AntimonyGrammarVisitor } from "./AntimonyGrammarVisitor";


export class AntimonyGrammarParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly END = 32;
	public static readonly ARROW = 33;
	public static readonly INTERACTION_SYMBOL = 34;
	public static readonly NUMBER = 35;
	public static readonly BOOLEAN = 36;
	public static readonly COMPARE = 37;
	public static readonly LOGICAL = 38;
	public static readonly SBOTERM = 39;
	public static readonly AEQ = 40;
	public static readonly ANNOT_KEYWORD = 41;
	public static readonly MODEL_CREATOR_TOKEN = 42;
	public static readonly MODEL_CREATOR_SUBFIELD = 43;
	public static readonly MODEL = 44;
	public static readonly MULTILINE_STRING = 45;
	public static readonly VAR_MODIFIER = 46;
	public static readonly SUB_MODIFIER = 47;
	public static readonly TYPE_MODIFIER = 48;
	public static readonly COMMENT = 49;
	public static readonly NAME = 50;
	public static readonly CNAME = 51;
	public static readonly LETTER = 52;
	public static readonly WORD = 53;
	public static readonly LCASE_LETTER = 54;
	public static readonly UCASE_LETTER = 55;
	public static readonly DIGIT = 56;
	public static readonly NEWLINE = 57;
	public static readonly WS = 58;
	public static readonly ESCAPED_STRING = 59;
	public static readonly RULE_root = 0;
	public static readonly RULE_model = 1;
	public static readonly RULE_var_name = 2;
	public static readonly RULE_in_comp = 3;
	public static readonly RULE_namemaybein = 4;
	public static readonly RULE_event = 5;
	public static readonly RULE_event_delay = 6;
	public static readonly RULE_event_trigger_list = 7;
	public static readonly RULE_event_trigger = 8;
	public static readonly RULE_empty = 9;
	public static readonly RULE_reaction_name = 10;
	public static readonly RULE_reaction = 11;
	public static readonly RULE_species_list = 12;
	public static readonly RULE_species = 13;
	public static readonly RULE_interaction = 14;
	public static readonly RULE_event_assignment_list = 15;
	public static readonly RULE_event_assignment = 16;
	public static readonly RULE_sboterm = 17;
	public static readonly RULE_assignment = 18;
	public static readonly RULE_apostrophe = 19;
	public static readonly RULE_rate_rule = 20;
	public static readonly RULE_annotation = 21;
	public static readonly RULE_annot_list = 22;
	public static readonly RULE_new_annot = 23;
	public static readonly RULE_model_annotation = 24;
	public static readonly RULE_model_notes = 25;
	public static readonly RULE_declaration = 26;
	public static readonly RULE_decl_modifiers = 27;
	public static readonly RULE_decl_item = 28;
	public static readonly RULE_decl_assignment = 29;
	public static readonly RULE_unit = 30;
	public static readonly RULE_unit_declaration = 31;
	public static readonly RULE_unit_assignment = 32;
	public static readonly RULE_mmodel_call = 33;
	public static readonly RULE_bool_exp = 34;
	public static readonly RULE_expressions = 35;
	public static readonly RULE_sum = 36;
	public static readonly RULE_product = 37;
	public static readonly RULE_power = 38;
	public static readonly RULE_atom = 39;
	public static readonly RULE_func_call = 40;
	public static readonly RULE_simple_stmt = 41;
	public static readonly RULE_small_stmt = 42;
	public static readonly RULE_simple_stmt_list = 43;
	public static readonly RULE_import_ = 44;
	public static readonly RULE_modular_model = 45;
	public static readonly RULE_function = 46;
	public static readonly RULE_parameters = 47;
	public static readonly RULE_init_params = 48;
	public static readonly RULE_variable_in = 49;
	public static readonly RULE_is_assignment = 50;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "model", "var_name", "in_comp", "namemaybein", "event", "event_delay", 
		"event_trigger_list", "event_trigger", "empty", "reaction_name", "reaction", 
		"species_list", "species", "interaction", "event_assignment_list", "event_assignment", 
		"sboterm", "assignment", "apostrophe", "rate_rule", "annotation", "annot_list", 
		"new_annot", "model_annotation", "model_notes", "declaration", "decl_modifiers", 
		"decl_item", "decl_assignment", "unit", "unit_declaration", "unit_assignment", 
		"mmodel_call", "bool_exp", "expressions", "sum", "product", "power", "atom", 
		"func_call", "simple_stmt", "small_stmt", "simple_stmt_list", "import_", 
		"modular_model", "function", "parameters", "init_params", "variable_in", 
		"is_assignment",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'module'", "'*'", "'()'", "'$'", "'in'", "'at'", "':'", "'after'", 
		"','", "'t0'", "'='", "'priority'", "'fromTrigger'", "'persistent'", "';'", 
		"'+'", "'.sboTerm'", "'''", "'notes'", "'unit'", "'has'", "'('", "')'", 
		"'-'", "'/'", "'^'", "'exp'", "'e'", "'import'", "'function'", "'is'", 
		"'end'", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "':='", undefined, undefined, undefined, "'model'", undefined, 
		undefined, "'substanceOnly'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "END", "ARROW", "INTERACTION_SYMBOL", 
		"NUMBER", "BOOLEAN", "COMPARE", "LOGICAL", "SBOTERM", "AEQ", "ANNOT_KEYWORD", 
		"MODEL_CREATOR_TOKEN", "MODEL_CREATOR_SUBFIELD", "MODEL", "MULTILINE_STRING", 
		"VAR_MODIFIER", "SUB_MODIFIER", "TYPE_MODIFIER", "COMMENT", "NAME", "CNAME", 
		"LETTER", "WORD", "LCASE_LETTER", "UCASE_LETTER", "DIGIT", "NEWLINE", 
		"WS", "ESCAPED_STRING",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AntimonyGrammarParser._LITERAL_NAMES, AntimonyGrammarParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AntimonyGrammarParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "AntimonyGrammar.g4"; }

	// @Override
	public get ruleNames(): string[] { return AntimonyGrammarParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AntimonyGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AntimonyGrammarParser._ATN, this);
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let _localctx: RootContext = new RootContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AntimonyGrammarParser.RULE_root);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntimonyGrammarParser.T__0) | (1 << AntimonyGrammarParser.T__3) | (1 << AntimonyGrammarParser.T__5) | (1 << AntimonyGrammarParser.T__14) | (1 << AntimonyGrammarParser.T__19) | (1 << AntimonyGrammarParser.T__28) | (1 << AntimonyGrammarParser.T__29))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (AntimonyGrammarParser.ARROW - 33)) | (1 << (AntimonyGrammarParser.NUMBER - 33)) | (1 << (AntimonyGrammarParser.MODEL - 33)) | (1 << (AntimonyGrammarParser.VAR_MODIFIER - 33)) | (1 << (AntimonyGrammarParser.SUB_MODIFIER - 33)) | (1 << (AntimonyGrammarParser.TYPE_MODIFIER - 33)) | (1 << (AntimonyGrammarParser.COMMENT - 33)) | (1 << (AntimonyGrammarParser.NAME - 33)) | (1 << (AntimonyGrammarParser.NEWLINE - 33)))) !== 0)) {
				{
				this.state = 106;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 102;
					this.simple_stmt();
					}
					break;

				case 2:
					{
					this.state = 103;
					this.model();
					}
					break;

				case 3:
					{
					this.state = 104;
					this.function();
					}
					break;

				case 4:
					{
					this.state = 105;
					this.modular_model();
					}
					break;
				}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public model(): ModelContext {
		let _localctx: ModelContext = new ModelContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AntimonyGrammarParser.RULE_model);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.NEWLINE) {
				{
				this.state = 111;
				this.match(AntimonyGrammarParser.NEWLINE);
				}
			}

			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.COMMENT) {
				{
				this.state = 114;
				this.match(AntimonyGrammarParser.COMMENT);
				}
			}

			this.state = 117;
			_la = this._input.LA(1);
			if (!(_la === AntimonyGrammarParser.T__0 || _la === AntimonyGrammarParser.MODEL)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.T__1) {
				{
				this.state = 118;
				this.match(AntimonyGrammarParser.T__1);
				}
			}

			this.state = 121;
			this.match(AntimonyGrammarParser.NAME);
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.T__2) {
				{
				this.state = 122;
				this.match(AntimonyGrammarParser.T__2);
				}
			}

			this.state = 125;
			this.simple_stmt_list();
			this.state = 126;
			this.match(AntimonyGrammarParser.END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public var_name(): Var_nameContext {
		let _localctx: Var_nameContext = new Var_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AntimonyGrammarParser.RULE_var_name);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.T__3) {
				{
				this.state = 128;
				this.match(AntimonyGrammarParser.T__3);
				}
			}

			this.state = 131;
			this.match(AntimonyGrammarParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public in_comp(): In_compContext {
		let _localctx: In_compContext = new In_compContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AntimonyGrammarParser.RULE_in_comp);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(AntimonyGrammarParser.T__4);
			this.state = 134;
			this.var_name();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namemaybein(): NamemaybeinContext {
		let _localctx: NamemaybeinContext = new NamemaybeinContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, AntimonyGrammarParser.RULE_namemaybein);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.var_name();
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.T__4) {
				{
				this.state = 137;
				this.in_comp();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public event(): EventContext {
		let _localctx: EventContext = new EventContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, AntimonyGrammarParser.RULE_event);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AntimonyGrammarParser.T__3 || _la === AntimonyGrammarParser.NAME) {
				{
				this.state = 140;
				this.reaction_name();
				}
			}

			this.state = 143;
			this.match(AntimonyGrammarParser.T__5);
			this.state = 145;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 144;
				this.event_delay();
				}
				break;
			}
			this.state = 147;
			this.bool_exp();
			this.state = 149;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 148;
				this.event_trigger_list();
				}
				break;
			}
			this.state = 151;
			this.match(AntimonyGrammarParser.T__6);
			this.state = 152;
			this.event_assignment_list();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public event_delay(): Event_delayContext {
		let _localctx: Event_delayContext = new Event_delayContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, AntimonyGrammarParser.RULE_event_delay);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.bool_exp();
			this.state = 155;
			this.match(AntimonyGrammarParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public event_trigger_list(): Event_trigger_listContext {
		let _localctx: Event_trigger_listContext = new Event_trigger_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, AntimonyGrammarParser.RULE_event_trigger_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === AntimonyGrammarParser.T__8) {
				{
				{
				this.state = 157;
				this.match(AntimonyGrammarParser.T__8);
				this.state = 158;
				this.event_trigger();
				}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public event_trigger(): Event_triggerContext {
		let _localctx: Event_triggerContext = new Event_triggerContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, AntimonyGrammarParser.RULE_event_trigger);
		try {
			this.state = 176;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AntimonyGrammarParser.T__9:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 164;
				this.match(AntimonyGrammarParser.T__9);
				this.state = 165;
				this.match(AntimonyGrammarParser.T__10);
				this.state = 166;
				this.match(AntimonyGrammarParser.BOOLEAN);
				}
				break;
			case AntimonyGrammarParser.T__11:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 167;
				this.match(AntimonyGrammarParser.T__11);
				this.state = 168;
				this.match(AntimonyGrammarParser.T__10);
				this.state = 169;
				this.sum(0);
				}
				break;
			case AntimonyGrammarParser.T__12:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 170;
				this.match(AntimonyGrammarParser.T__12);
				this.state = 171;
				this.match(AntimonyGrammarParser.T__10);
				this.state = 172;
				this.match(AntimonyGrammarParser.BOOLEAN);
				}
				break;
			case AntimonyGrammarParser.T__13:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 173;
				this.match(AntimonyGrammarParser.T__13);
				this.state = 174;
				this.match(AntimonyGrammarParser.T__10);
				this.state = 175;
				this.match(AntimonyGrammarParser.BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public empty(): EmptyContext {
		let _localctx: EmptyContext = new EmptyContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, AntimonyGrammarParser.RULE_empty);
		try {
			this.enterOuterAlt(_localctx, 1);
			// tslint:disable-next-line:no-empty
			{
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public reaction_name(): Reaction_nameContext {
		let _localctx: Reaction_nameContext = new Reaction_nameContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, AntimonyGrammarParser.RULE_reaction_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.namemaybein();
			this.state = 181;
			this.match(AntimonyGrammarParser.T__6);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public reaction(): ReactionContext {
		let _localctx: ReactionContext = new ReactionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, AntimonyGrammarParser.RULE_reaction);
		let _la: number;
		try {
			this.state = 213;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 184;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
				case 1:
					{
					this.state = 183;
					this.reaction_name();
					}
					break;
				}
				this.state = 186;
				this.species_list();
				this.state = 187;
				this.match(AntimonyGrammarParser.ARROW);
				this.state = 189;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === AntimonyGrammarParser.T__3 || _la === AntimonyGrammarParser.NUMBER || _la === AntimonyGrammarParser.NAME) {
					{
					this.state = 188;
					this.species_list();
					}
				}

				this.state = 191;
				this.match(AntimonyGrammarParser.T__14);
				this.state = 193;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntimonyGrammarParser.T__3) | (1 << AntimonyGrammarParser.T__15) | (1 << AntimonyGrammarParser.T__21) | (1 << AntimonyGrammarParser.T__23) | (1 << AntimonyGrammarParser.T__26))) !== 0) || _la === AntimonyGrammarParser.NUMBER || _la === AntimonyGrammarParser.NAME) {
					{
					this.state = 192;
					this.sum(0);
					}
				}

				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === AntimonyGrammarParser.T__4) {
					{
					this.state = 195;
					this.in_comp();
					}
				}

				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 199;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
				case 1:
					{
					this.state = 198;
					this.reaction_name();
					}
					break;
				}
				this.state = 202;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === AntimonyGrammarParser.T__3 || _la === AntimonyGrammarParser.NUMBER || _la === AntimonyGrammarParser.NAME) {
					{
					this.state = 201;
					this.species_list();
					}
				}

				this.state = 204;
				this.match(AntimonyGrammarParser.ARROW);
				this.state = 205;
				this.species_list();
				this.state = 206;
				this.match(AntimonyGrammarParser.T__14);
				this.state = 208;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntimonyGrammarParser.T__3) | (1 << AntimonyGrammarParser.T__15) | (1 << AntimonyGrammarParser.T__21) | (1 << AntimonyGrammarParser.T__23) | (1 << AntimonyGrammarParser.T__26))) !== 0) || _la === AntimonyGrammarParser.NUMBER || _la === AntimonyGrammarParser.NAME) {
					{
					this.state = 207;
					this.sum(0);
					}
				}
